thisdir = $(prefix)/share/@PACKAGE@/demo

SUBDIRS = release dend3 sync

this_DATA = \
cycle.hoc \
d3init.hoc \
demo.hoc \
demo.ses \
dend3.ses \
hh.hoc \
hh.ses \
nomodel.hoc \
pyramid.nrn \
pyramid.ses \
reconst.hoc \
release.hoc \
release.ses \
dynchan.ses dynclamp.ses dynclamp.hoc \
singhh.hoc singhh.ses singhhchan.hoc \
testca.hoc

EXTRA_DIST = $(this_DATA)

