# Just copy the .h files into the distribution tar file
EXTRA_DIST = aes.h array.h ars.h philox.h threefry.h \
	features/compilerfeatures.h features/gccfeatures.h \
	features/iccfeatures.h features/llvmfeatures.h features/msvcfeatures.h \
	features/nvccfeatures.h features/open64features.h \
	features/openclfeatures.h features/sse.h features/sunprofeatures.h \
	features/xlcfeatures.h features/pgccfeatures.h \
	features/clangfeatures.h

